
<resources>
    <item type="id" name="TAG_CURRENT_GAME" />
    <string name="app_name">Actinidia</string>
    <string name="choose_game">Select a game</string>
    <string name="tip">Make sure your have provided \nsdCard access permission.</string>
    <string name="warn">Please provide SD Card access permission!</string>
    <string name="github">Project page on Github</string>
    <string name="no_network">No network!</string>
    <string name="unlock">Unlock</string>
    <string name="download">Download</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="run">Run</string>
    <string name="copyright">Copyright &#169; 2020\nmoooc.cc</string>
    <string name="visit_bbs">Visit forum</string>
    <string name="unlock_success">Unlock successfully!</string>
    <string name="confirm_download">Will download %1$.2fMiB, continue?</string>
    <string name="wait_download">Downloading&#8230;</string>
    <string name="install_success">Installed successfully!</string>
    <string name="confirm_delete">Confirm to delete?</string>
    <string name="delete_success">Delete successfully!</string>
    <string name="check_update">Check update</string>
    <string name="update_found">New version (%1$s) released!</string>
    <string name="confirm_update">Download the new version now?</string>
    <string name="no_update">Already the latest version!</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="failed_to_load_res">Failed to load game resources！</string>
    <string name="invalid_resource_pack">Invalid resource pack!</string>
    <string name="cannot_read_directory">Can not read directory: </string>
</resources>
